@@ -291,6 +291,7 @@ CONFCONT;
         $a['4.7']       = 80; // 4.7 to 4.8
         $a['4.8']       = 81; // 4.8 to 4.9
         $a['4.9']       = 82; // 4.9 to 4.10
+        $a['4.10']      = 83; // 4.10 to 4.10.1
         return $a;
         
     }
